# src/routes/auth.route.ts
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getAllUser, login, signUp, refreshToken } from '../controllers/auth.controller';
+import { getAllUser, login, signUp, refreshToken, verifyEmailAccount } from '../controllers/auth.controller';
 import { verifyToken } from '../services/token.service';
 // import { authenticateToken } from '../controllers/authController';
 const authRoute = express.Router();
@@ -11,5 +11,7 @@ authRoute.post('/sign-up', signUp);
 authRoute.post('/login', login);
 
 authRoute.post('/refresh-tokens', refreshToken);
+
+authRoute.post('/verify-email', verifyEmailAccount);
 
 export { authRoute };
